manifest/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
  namespace: nodeapp
  labels:
    app: nodeapp
    company: devops
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: nodeapp
