manifest/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  namespace: nodeapp
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-devops
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
    nginx.org/client-max-body-size: "32m"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodeapp 
            port:
              number: 3000
---

#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: nodeapp
#  namespace: nodeapp
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#spec:
#  tls:
#  - hosts:
#    - ops-gateway.oms.uatk8s.eyewa.com
#    secretName: ops-gateway-le
#  rules:
#  - host: ops-gateway.oms.uatk8s.eyewa.com
#    http:
#      paths:
#      - backend:
#          serviceName: ops-gateway
#          servicePort: 80
